# Intelligent-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: Rules.mdc
agents/: __init__.py
api/: __init__.py  main.py
chunking/: __init__.py  base.py  recursive_chunker.py  registry.py
config/: settings.py
connectors/: __init__.py  base.py  file_connector.py
data/: README.md
data/chunks/: full_pipeline_test.json  (+2 more)
document_builders/: __init__.py  base.py  file_document_builder.py
embeddings/: __init__.py  base.py  batcher.py  bge_m3_embedder.py
eval/: __init__.py
extractors/: __init__.py  base.py  pdf_extractor.py  registry.py
graph/: __init__.py
guardrails/: __init__.py
observability/: __init__.py  logger.py  tracing.py
pipelines/: __init__.py  embedding_pipeline.py  ingestion_orchestrator.py
prompts/: __init__.py
rag/: __init__.py  text_normalizer.py  token_counter.py
schemas/: __init__.py  chunk_document.py  embedding_record.py  parsed_unit.py  source_document.py  source_record.py
scripts/: download_bge_m3.py  list_vectordb_chunks.py  run_full_pipeline_to_vectordb.py
services/: __init__.py  agent_service.py  rag_service.py  workflow_service.py
state/: __init__.py  sync_state.py  unit_progress.py
storage/: __init__.py  parsed_unit_store.py  raw_store.py
tests/: __init__.py  conftest.py  test_bge_embedder_smoke.py  test_file_connector.py  test_pdf_extractor_stream.py  test_recursive_chunker.py  test_vector_store.py
tools/: __init__.py
vector_store/: __init__.py  base.py  chroma_store.py
(+6 files in other folders)
