[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-rag"
version = "0.1.0"
description = "Agentic Enterprise Document Intelligence System"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "chunking*", "config*", "connectors*", "document_builders*", "eval*", "extractors*", "graph*", "guardrails*", "observability*", "pipelines*", "prompts*", "rag*", "schemas*", "services*", "state*", "storage*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
